# v64

./: .gitignore  Cargo.toml  DESIGN_atomics.md  DESIGN_fp_gaps.md  DESIGN_mmu.md  DESIGN_neon.md  DESIGN_syscalls.md  README.md  v64-fb.ppm
.cargo/: config.toml
crates/cpu/: Cargo.toml
crates/cpu/src/: flags.rs  lib.rs  regs.rs  state.rs  tlb.rs
crates/cpu/tests/: regs_layout.rs
crates/decoder/: Cargo.toml
crates/decoder/src/: add_sub_carry.rs  add_sub_ext_reg.rs  add_sub_imm.rs  add_sub_shifted_reg.rs  bitfield.rs  bitmask.rs  bits.rs  block.rs  branch.rs  branch_imm.rs  branch_reg.rs  compare_branch.rs  cond_branch.rs  cond_compare.rs  cond_select.rs  data_proc_1src.rs  data_proc_2src.rs  data_proc_3src.rs  dp_imm.rs  dp_reg.rs  extract.rs  fp.rs  fp_ccmp.rs  fp_cvt.rs  fp_dp1.rs  fp_dp2.rs  fp_dp3.rs  fp_imm.rs  insn.rs  ldst.rs  ldst_excl.rs  ldst_literal.rs  ldst_pair.rs  ldst_post.rs  ldst_pre.rs  ldst_reg.rs  ldst_uimm.rs  ldst_unscaled.rs  lib.rs  logical_imm.rs  (+16 more)
crates/decoder/src/fp/: compare.rs  csel.rs  cvt.rs  fixed.rs
crates/decoder/src/ldst/: atomic.rs  excl.rs  literal.rs  post.rs  pre.rs  reg.rs  structs.rs  uimm.rs  unscaled.rs
crates/decoder/src/neon/: across.rs  aes.rs  mod_imm.rs  scalar.rs  sha.rs  shift_imm.rs  tbl.rs  three_diff.rs  two_reg_misc.rs  zip_trn.rs
crates/decoder/tests/: bitmask.rs  decode.rs  no_panic.rs
crates/difftest/: Cargo.toml  build.rs
crates/difftest/src/: fuzz.rs  jit_run.rs  lib.rs  mmu_test.rs  oracle.rs  ours.rs  pool.rs  rng.rs  snapshot.rs  vector.rs
crates/difftest/src/encoders/: branch.rs  fp.rs  integer.rs  loadstore.rs  mod.rs  neon.rs
crates/difftest/src/encoders/loadstore/: atomic.rs  mod.rs  scalar.rs  simd.rs
crates/difftest/src/encoders/neon/: crypto.rs  mod.rs  scalar.rs  vector.rs
crates/difftest/tests/: coverage.rs  fuzz_sweep.rs  jit_sweep.rs  mmu_oracle.rs  mmu_vector_xpage.rs  oracle.rs  ours.rs  pixman_diff.rs  struct_fault.rs
crates/interp/: Cargo.toml
crates/interp/src/: add_sub_carry.rs  add_sub_ext_reg.rs  add_sub_imm.rs  add_sub_shifted_reg.rs  alu.rs  bitfield.rs  branch_imm.rs  branch_reg.rs  compare_branch.rs  cond.rs  cond_branch.rs  cond_compare.rs  cond_select.rs  data_proc_1src.rs  data_proc_2src.rs  data_proc_3src.rs  exception.rs  execute.rs  extract.rs  fp.rs  fp_round.rs  ldst.rs  ldst_atomic.rs  ldst_cas.rs  ldst_excl.rs  ldst_pair.rs  lib.rs  logical_imm.rs  logical_reg.rs  mem_access.rs  memory.rs  mmu.rs  move_wide.rs  pc_rel.rs  psci.rs  regs.rs  run.rs  simd.rs  simd_across.rs  simd_aes.rs  (+20 more)
crates/interp/src/fp/: convert.rs  flags.rs  round.rs
crates/interp/src/ldst/: atomic.rs  cas.rs  excl.rs  pair.rs
crates/interp/src/simd/: across.rs  copy.rs  dup.rs  indexed.rs  ldst_struct.rs  mod_imm.rs  scalar.rs  shift_imm.rs  tbl.rs  three_diff.rs  three_same_fp.rs  two_reg_long.rs  two_reg_misc.rs  two_reg_misc_fp.rs
crates/interp/tests/: alu.rs  cond.rs  exception.rs  fpsr.rs  mmu.rs  psci.rs  run.rs  system_insns.rs  timer.rs
crates/jit/: Cargo.toml
crates/jit/src/: abi.rs  block.rs  dispatch.rs  eligible.rs  emit.rs  lib.rs  region.rs  runtime.rs
crates/jit/src/lower/: arith.rs  atomic.rs  common.rs  cond.rs  dataproc.rs  fp.rs  memory.rs  mod.rs  terminator.rs
crates/jit/src/lower/simd/: copy.rs  mod.rs  permute.rs  shift.rs  three_diff.rs  three_same.rs  two_reg_misc.rs
crates/jit/tests/: block.rs  crosscheck.rs  dispatch.rs  lower.rs  runtime.rs
crates/platform/: Cargo.toml
crates/platform/src/: board.rs  bus.rs  clock.rs  fdt.rs  gic.rs  lib.rs  loader.rs  machine.rs  uart.rs
crates/platform/src/machine/: jit.rs  mod.rs
crates/platform/src/virtio/: blk.rs  gpu.rs  input.rs  mod.rs  queue.rs  rng.rs
crates/platform/tests/: boot.rs  bus.rs  fdt.rs  gic.rs  irq.rs  jit_organizer.rs  kernels.rs  no_panic.rs  psci.rs  timer.rs  uart.rs  virtio.rs  virtio_hid.rs
crates/platform/tests/common/: mod.rs
crates/web/: Cargo.toml  bench.cjs  boot.cjs  bootcmp.cjs  bootdisk.cjs  build.sh  microbench.cjs  run.cjs  serve.cjs  uitest-worker.js  uitest.html
crates/web/src/: lib.rs
crates/web/tests/: jit_crosscheck.rs
docs/: isa-coverage.md  jit-plan.md  jit-progress.md  platform-progress.md
guest/: README.md  kernel.config
guest/desktop/: 10-fbdev.conf  Dockerfile  README.md  build.sh  init.sh  mkrootfs.sh  v64_desktop_defconfig  xinitrc
guest/desktop/overlay/etc/X11/xorg.conf.d/: 10-fbdev.conf
guest/desktop/overlay/etc/init.d/: S99xdesktop
guest/desktop/overlay/root/: .xinitrc
guest/initramfs/: busybox.init  libctest.init  uitest.init
guest/src/: ifup-lo.c  init.c  uitest.c
